[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Path2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/aura.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shadow.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PathFollow2D.gd" type="Script" id=4]
[ext_resource path="res://Assets/Bomb/tile000.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bomb/tile001.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bomb/tile002.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bomb/tile003.png" type="Texture" id=8]
[ext_resource path="res://Assets/Bomb/tile004.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bomb/tile005.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bomb/tile006.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bomb/tile007.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bomb/tile008.png" type="Texture" id=13]
[ext_resource path="res://Assets/Bomb/tile009.png" type="Texture" id=14]
[ext_resource path="res://Assets/Bomb/tile010.png" type="Texture" id=15]
[ext_resource path="res://Assets/Bomb/tile011.png" type="Texture" id=16]
[ext_resource path="res://Assets/Bomb/tile012.png" type="Texture" id=17]
[ext_resource path="res://Sounds/bomb.wav" type="AudioStream" id=18]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -128, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 51.9618

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BombBasic" type="Path2D" index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
animation_seconds = 1

[node name="Shadow" type="Sprite" parent="." index="0"]

self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 8 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]
shadow_on_land = 0.3

[node name="PathFollow2D" type="PathFollow2D" parent="." index="1"]

position = Vector2( 0, -128 )
rotation = 1.5708
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="PathFollow2D" index="0"]

rotation = -3.14159
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 33825
collision_mask = 33825
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="PathFollow2D/Area2D" index="1"]

position = Vector2( 10, 0.000927885 )
rotation = 1.5708
z_as_relative = false
frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 18 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="TimerAudio" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.8
one_shot = true
autostart = true

[node name="TimerExplosion" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="PathFollow2D/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="PathFollow2D/Area2D" to="." method="_on_Area2D_area_exited"]

[connection signal="animation_finished" from="PathFollow2D/Area2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="TimerAudio" to="." method="_on_TimerAudio_timeout"]

[connection signal="timeout" from="TimerExplosion" to="." method="_on_TimerExplosion_timeout"]


